# strawberry

./: CMakeLists.txt
ext/ebur128control/: CMakeLists.txt  ebur128control.cpp  ebur128control.h
src/: CMakeLists.txt
src/core/: player.cpp
src/engine/: enginebase.cpp  enginebase.h  gstengine.cpp  gstengine.h  gstenginepipeline.cpp  gstenginepipeline.h  gststartup.cpp  vlcengine.cpp  vlcengine.h
src/playlist/: playlistitem.h
src/settings/: backendsettingspage.cpp  backendsettingspage.h  backendsettingspage.ui
